# compressed-sense-spectal-recursive-self-improvement

./: README.md  pyproject.toml
audit_logs/: iter_0001_39fb6478da92c3f2.json  iter_0001_729eb2750a05a388.json  iter_0001_7cd5614d6ba92838.json  iter_0001_f17b8281c653a45d.json  iter_0002_0b1665cdd54c5eb5.json  iter_0002_9582674155a5dbcc.json  iter_0002_9e51c7cf8c34199c.json  iter_0002_a2f723e215b9400e.json  iter_0003_21f9da59698dd949.json  iter_0003_661116b634261de8.json  iter_0003_6887c24d4f4786fd.json  iter_0003_73c5ad66ddf8c48c.json  iter_0004_187ab72fd645478c.json  iter_0004_3b9d1881a19618ee.json  iter_0004_85856ec8be70e233.json  iter_0004_a314ae216f635169.json
experiments/: run_demo.py  run_stopping_stress.py
spectra_rsi/: __init__.py  config.py  drift.py  experts.py  gate.py  loop.py  metrics.py  probes.py  recovery.py  sketch.py  world.py
spectra_rsi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_gate.py  test_loop.py  test_recovery.py  test_sketch.py
