[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spectra-rsi"
version = "0.1.0"
description = "Counterfactual spectral sketching and anytime-valid gating for modular recursive self-improvement (reference implementation)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Andrew M." }]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["spectra_rsi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
